[project]
name = "twitter-sandbox-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "bs4>=0.0.2",
    "google-genai>=1.2.0",
    "jinja2>=3.1.5",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.73",
    "langsmith>=0.3.8",
    "logfire>=3.5.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.24",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
